# enviPath-python

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: requirements.txt  tutorial_docs.md
docs/source/: conf.py  enviPath_python.rst  getting_started.rst  index.rst  installation.rst  modules.rst  objects.rst
docs/source/assets/: additional_information_data.csv
docs/source/tutorials/: Download additional information data.ipynb  access_reviewed_packages_tutorial.ipynb  accessing_packages.ipynb  create_package.ipynb  download_additional_information_data.ipynb  download_pathway_SBML.ipynb  transformation_product_prediction.ipynb
enviPath_python/: __init__.py  __version__.py  enums.py  enviPath.py  objects.py  tests.py  utils.py
